Update grid gap in styles.css and fix script tag in index-week4.html

--- a/week4/css/styles.css
+++ b/week4/css/styles.css
@@ -7,7 +7,7 @@ body {
 main {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 2%;
+  gap: 10%;
 }
 
 .card {
@@ -22,10 +22,6 @@ main {
 }
 
 .tags {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
   margin: 0;
   padding: 0;
   list-style: none;
